--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/capacity_augmentation_bound.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/capacity_augmentation_bound.tex
@@ -18,7 +18,7 @@
     }
 \end{frame}
 
-\begin{frame}[label=theorem1]{並列タスクのためのキャパシティ拡張境界定理}
+\begin{frame}[label=theorem1]{並列タスクのためのキャパシティ拡張境界Theorem}
     \begin{theorem}[]
         $m$ コア上の並列タスクのための任意のスケジューラのキャパシティ拡張境界の下限は $2-\frac{1}{m}$
         \notes{証明略}
