--- a/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/symbols_terms.tex
+++ b/paper/2021_ACM_TECS_HMDS_A_Makespan_Minimizing_DAG_Scheduler_for_Heterogeneous_Distributed_Systems/symbols_terms.tex
@@ -8,7 +8,8 @@
                     $G(V, E)$                               & DAG                                      \\\hline
                     $V = \{\tau_1, \tau_2,
 \item
-\item ., \tau_{|V|}\}$ & タスクセット                             \\\hline
+\item
+\item , \tau_{|V|}\}$ & タスクセット                             \\\hline
                     $E$                                     & タスク間の優先度制約                   \\\hline
                     $e_{i,j} \in E$                         & $\tau_i, \tau_j$ 間の優先度制約        \\\hline
                     $data_{i,j}$                            & $\tau_i$から$\tau_j$に送信されるデータ量 \\\hline
@@ -28,7 +29,8 @@
                 \centering\begin{tabular}{|c|l|} \hline
                     $P = \{p_1, p_2,
 \item
-\item ., p_{|P|}\}$                     & ヘテロジニアスプロセッサセット                                               \\\hline
+\item
+\item , p_{|P|}\}$                     & ヘテロジニアスプロセッサセット                                               \\\hline
                     行列 $B$ (サイズ $|P|\times|P|$)                   & 全てのプロセッサ間のデータ転送帯域幅を格納した行列                           \\\hline
                     $b_{m,n}$                                          & $p_m$と$p_n$間のデータ転送帯域幅                                             \\\hline
                     $L_m$                                              & $p_m$の通信起動コスト                                                        \\\hline
