--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
@@ -36,7 +36,7 @@
             \item 分析の精度を向上させるために, セクション $5.4$ では, サブチェーンと呼ばれるチェーンの部分が全体論的な方法で分析される境界を提示する
             \item $\gamma^{x}$ の $y$ 番目のサブチェーン $\gamma^{x, y}$ を, 単一の予約 $r_{k}$ に割り当てられた基のチェーンの連続したコールバック $c_{i} \in \gamma^{x}$ のシーケンス, すなわち $c_{i} \in \gamma^{x, y} \Rightarrow c_{i} \in \mathcal{C}_{k}$ として定義する
             \item このアプローチでは, 到着バーストはサブチェーンごとに 1 回だけ考慮される
-            \item CPA アプローチは, サブチェーンが予約境界を越えるか, 複数の先行者を持つコールバックで別のチェーンと結合するたびに到着曲線を伝播し, 最悪応答時間を合計することにより, サブチェーンごとに適用できる
+            \item CPA アプローチは, サブチェーンが予約境界を越えるか, 複数の先行ノードを持つコールバックで別のチェーンと結合するたびに到着曲線を伝播し, 最悪応答時間を合計することにより, サブチェーンごとに適用できる
         \end{itemize}
     \end{frame}
 }
