--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
@@ -22,7 +22,7 @@
         ロボットのハードウェア (レーザースキャナ, オドメータ, 電気モーターで動く車輪) にROSインタフェースを提供する Turtlebot 用ドライバ
     \end{block}
     \begin{block}{ROSナビゲーションスタック}
-        ナビゲーション計画, 経路追従, および自己位置特定を含む, 車輪付き移動ロボットのための一般的なナビゲーションプリミティブを実装
+        ナビゲーション計画, パス追従, および自己位置特定を含む, 車輪付き移動ロボットのための一般的なナビゲーションプリミティブを実装
     \end{block}
     \begin{block}{オブジェクトトラッカーペイロード}
         ビデオシーケンスを通して指定されたオブジェクトを追跡し, 計算負荷の高いミッションクリティカル (セーフティクリティカルではない) ペイロードの典型例として機能する
