--- a/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/dynamic_federated_scheduling.tex
+++ b/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/dynamic_federated_scheduling.tex
@@ -82,7 +82,7 @@
 
 \begin{frame}{疑似アルゴリズムの事前準備}
     \begin{itemize}
-        \item 新しい DAG ジョブ $J_{k, i}$ がリリースされたとき、アルゴリズムが起動される前に、ジョブは FIFO キューに入れられ, $\operatorname{started}\left(J_{k, i}\right)= False$ と設定される
+        \item 新しい DAG ジョブ $J_{k, i}$ がリリースされたとき, アルゴリズムが起動される前に, ジョブは FIFO キューに入れられ, $\operatorname{started}\left(J_{k, i}\right)= False$ と設定される
         \item \desc{$m_k$}{$\tau_k$ のサブジョブを実行しているコア数を保持する}
         \item \desc{$m_k^{ded}$}{$\tau_k$ 用に確保されているコア数を保持する}
     \end{itemize}
