--- a/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/evaluation.tex
+++ b/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/evaluation.tex
@@ -4,8 +4,8 @@
 \label{sec: eva}
 
 \begin{frame}{評価方法}
-    ランダムに生成されたタスクセットに対してDynFedを適用し, 受け入れ率を測定する
-    \begin{block}{受け入れ率}
+    ランダムに生成されたタスクセットに対してDynFedを適用し, 受入率を測定する
+    \begin{block}{受入率}
         タスクセットの総数に対するスケジューリング可能と判断されたタスクセットの割合
     \end{block}
 \end{frame}
@@ -59,14 +59,14 @@
 
 \begin{frame}{結果}
     \fitimage{
-        DynFedはどのパラメータにおいても高い受け入れ率を示す
+        DynFedはどのパラメータにおいても高い受入率を示す
     }{eva1}
 \end{frame}
 
 \begin{frame}{オフラインスケジューリングの結果}
     \fitimage{
         \begin{itemize}
-            \item オフラインスケジューリングは最も高い受け入れ率を達成している
+            \item オフラインスケジューリングは最も高い受入率を達成している
             \item しかし, オフラインスケジューリングはタイマに依存するという欠点がある
         \end{itemize}
     }{eva1}
