--- a/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/introduction.tex
+++ b/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/introduction.tex
@@ -6,7 +6,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item 近年, ADAS (Advanced Driver Assistance Systems) 搭載車, 自動運転車, 自動運転レーシングカーなど, さまざまな形態で自動運転車 (AV) が市場に展開されつつある
-        \item これらのAVには, 各種センサからのデータを読み取り, 自己位置推定, 障害物検出追尾, 経路計画, 軌道計画追従などの演算を行い, 最終的に車両制御信号を出力するコンピューティングシステムが搭載されている
+        \item これらのAVには, 各種センサからのデータを読み取り, 自己位置推定, 障害物検出追尾, パス計画, 軌道計画追従などの演算を行い, 最終的に車両制御信号を出力するコンピューティングシステムが搭載されている
         \item このような演算システムでは, センシングから車両制御までのエンドツーエンドレイテンシは, 前方の他の車や歩行者と衝突するまでの時間に直接関係するため, 車両の安全性や性能にとって重要である
     \end{itemize}
 \end{frame}
