--- a/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/preliminaries.tex
+++ b/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/preliminaries.tex
@@ -21,7 +21,7 @@
 %     \fitimage{
 %         \begin{itemize}
 %             \item 図 は一般的な AV スタックの上位概念である
-%             \item 自己位置推定, 障害物検出追従, 経路計画, 軌道計画追従, 車両制御の 5 つのコア機能から構成されている
+%             \item 自己位置推定, 障害物検出追従, パス計画, 軌道計画追従, 車両制御の 5 つのコア機能から構成されている
 %         \end{itemize}
 %     }{av_stack}
 % \end{frame}
@@ -159,7 +159,7 @@
 \begin{frame}{確率的実行時間}
     \begin{itemize}
         \item 各タスク $\tau_{i}^{k}$ は確率的な実行時間 $C_{i}^{k}$ を持つ
-        \item $C_{i}^{k}$ の確率分布は, 実際の代表的なセンサワークロードから生成した publish メッセージによるタスクのプロファイリング, あるいは publish メッセージからの極値理論 [6]や拡張経路網羅法 [7] による確率的推論によって得られる
+        \item $C_{i}^{k}$ の確率分布は, 実際の代表的なセンサワークロードから生成した publish メッセージによるタスクのプロファイリング, あるいは publish メッセージからの極値理論 [6]や拡張パス網羅法 [7] による確率的推論によって得られる
         \item あるタスクの実行時間は同一分布で, 他のタスクの実行時間とは独立であると仮定する
     \end{itemize}
 \end{frame}
@@ -271,7 +271,7 @@
 
 \begin{frame}{目標の定式化}
     \begin{itemize}
-        \item 我々の目標は, タスクの各経路 $S$ について, 実システムで観測されるものを上回るエンドツーエンドレイテンシ分布を得ること
+        \item 我々の目標は, タスクの各パス $S$ について, 実システムで観測されるものを上回るエンドツーエンドレイテンシ分布を得ること
         \item 各コアの最大利用率が $1.0$ を超える場合まで考慮するので, システムが定常状態に達したときに得られる $L\left(S^{<h>}\right)$ の定常分布を求める
         % \item この分布は, $h \rightarrow \infty$ に近づくことで得られる極限分布と定義される
         \begin{itemize}
