--- a/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/proposed_analysis.tex
+++ b/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/proposed_analysis.tex
@@ -128,7 +128,7 @@
 
 % \begin{frame}{}
 %     \begin{itemize}
-%         \item 直接依存する先行者 $\tau_{X}$ のRTDが与えられると, 縮小演算子は後続ノード $\tau_{Y}$ のWTDを計算するために使用できる
+%         \item 直接依存する先行ノード $\tau_{X}$ のRTDが与えられると, 縮小演算子は後続ノード $\tau_{Y}$ のWTDを計算するために使用できる
 %         \item この場合, オペランド $d$ は $\lambda_{Y}-\lambda_{X}$ に設定されるため, $W T D_{Y}=R T D_{X} \ominus d$ となる
 %     \end{itemize}
 % \end{frame}
@@ -160,7 +160,7 @@
 %                   \end{equation*}
 
 %             \item 最大演算子は, 複数の直接依存する先行ノードを持つ $\tau_{Z}$ のWTDを計算するために使用される
-%             \item $\tau_{Z}$ が2つの先行者, すなわち $\tau_{X}$ と $\tau_{Y}, W T D_{Z}=$  $W T D_{X \rightarrow Z} \bowtie W T D_{Y \rightarrow Z}$ を持つ場合, $W T D_{X \rightarrow Z}=R T D_{X} \ominus$  $\left(\lambda_{Z}-\lambda_{X}\right)$ と $W T D_{Y \rightarrow Z}=R T D_{Y} \ominus\left(\lambda_{Z}-\lambda_{Y}\right)$ である
+%             \item $\tau_{Z}$ が2つの先行ノード, すなわち $\tau_{X}$ と $\tau_{Y}, W T D_{Z}=$  $W T D_{X \rightarrow Z} \bowtie W T D_{Y \rightarrow Z}$ を持つ場合, $W T D_{X \rightarrow Z}=R T D_{X} \ominus$  $\left(\lambda_{Z}-\lambda_{X}\right)$ と $W T D_{Y \rightarrow Z}=R T D_{Y} \ominus\left(\lambda_{Z}-\lambda_{Y}\right)$ である
 %         \end{itemize}
 %     \end{definition}
 % \end{frame}
