--- a/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/related_work.tex
+++ b/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/related_work.tex
@@ -26,7 +26,7 @@
         \item 
 \item 最近, [6]では, Apolloスタックの各タスクの確率的最悪実行時間 (pWCET) が, 極値理論を用いて分析されている
 \item この理論[7]により, キャッシュやメモリバスなどのアーキテクチャの複雑さを考慮しつつ, 実分布を上回る安全なpWCET分布を導出できる
-\item 安全性を保証するためには, 考慮する入力データまたはタスク内部の実行経路が, 可能な限りの実行経路を表現できるほど一般的であることが必要である7]では, 代表性を実現するために, 各タスク内の基本ブロックのpWCETを推定し畳み込むEPC (Extended Path Coverage) 法が提案されている25]では, タスクグラフの分析とメモリ帯域の使用状況を監視することにより, コア間干渉を推定している
+\item 安全性を保証するためには, 考慮する入力データまたはタスク内部の実行パスが, 可能な限りの実行パスを表現できるほど一般的であることが必要である7]では, 代表性を実現するために, 各タスク内の基本ブロックのpWCETを推定し畳み込むEPC (Extended Path Coverage) 法が提案されている25]では, タスクグラフの分析とメモリ帯域の使用状況を監視することにより, コア間干渉を推定している
 \item しかし, pWCETの分析は, タスクグラフのエンドツーエンドレイテンシをどのように分析するかについては扱っておらず, 基礎となるタスクモデルによりアイドルCPU時間が含まれる可能性がある
     \end{itemize}
 \end{frame}
