--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -27,6 +27,17 @@
   organization={IEEE}
 }
 
+@article{he2019intra,
+  title={Intra-task priority assignment in real-time scheduling of {DAG} tasks on multi-cores},
+  author={He, Qingqiang and Guan, Nan and Guo, Zhishan and others},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={30},
+  number={10},
+  pages={2283--2295},
+  year={2019},
+  publisher={IEEE}
+}
+
 @inproceedings{choi2020chain,
   title={Chain-based fixed-priority scheduling of loosely-dependent tasks},
   author={Choi, Hyunjong and Karimi, Mohsen and Kim, Hyoseung},
