--- a/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/input_event_models.tex
+++ b/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/input_event_models.tex
@@ -186,12 +186,12 @@
               \begin{block}{外部周期 $T^{O}$}
                   連続するバーストの最小間隔
               \end{block}
-              \begin{block}{$b$}
-                  1バースト内のイベントの最大数
-              \end{block}
               \begin{block}{内部周期 $T^{I}$}
-                  1バースト内の2イベント間の最小間隔
-              \end{block}
+                1バースト内の2イベント間の最小間隔
+            \end{block}
+            \begin{block}{$b$}
+                1バースト内のイベントの最大数
+            \end{block}
     \end{itemize}
 \end{frame}
 
@@ -199,7 +199,7 @@
     散発的バーストイベントの最悪イベント到着シナリオは以下
     \begin{block}{最悪イベント到着シナリオ}
         \begin{itemize}
-            \item 測定間隔の始めは, バースト内の最初のイベント
+            \item バースト内の最初のイベントが測定間隔の始め
             \item そのバースト内の後続のイベントが内部周期で到着する
             \item 後続の各バーストは同じ特性を持ち, 外部周期で到達する
         \end{itemize}
