--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/abstract.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/abstract.tex
@@ -2,12 +2,12 @@
 
 \begin{frame}{提案の概要}
     \begin{itemize}
-        \item 本論文では, 暗黙のデッドラインを持つ並列DAGタスクのスケジューリングについて考察する
-        \item 以下3つの異なるリアルタイムスケジューリング戦略を分析する
+        \item 暗黙的デッドラインを持つ並列DAGタスクに対して, 新しいフェデレートスケジューリングを提案する
+        \item 以下3つの異なるリアルタイムスケジューリング戦略をの性能を分析する
         \begin{itemize}
             \item グローバルEDF
             \item グローバルRMS
-            \item 提案フェデレートスケジューリング
+            \item フェデレートスケジューリング
         \end{itemize}
     \end{itemize}
 \end{frame}
