--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/conclusion.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/conclusion.tex
@@ -5,9 +5,9 @@
 
 \begin{frame}{まとめ}
     \begin{itemize}
-        \item 暗黙のデッドラインを持つ並列タスクに対して, フェデレートスケジューリング, G-EDF, G-RMのキャパシティ拡張境界がそれぞれ $2$, $2.618$, $3.732$ であることを証明した
-        \item フェデレートスケジューリングの境界 $2$, G-EDFの境界 $2.618$ は, $m$ が大きい場合, 一致する下限が存在するため, ともにタイトである
-        \item さらに, これらの3つの境界は, DAGタスクに対するこれらのスケジューラの最も良い境界である
+        \item 暗黙的デッドラインを持つ並列タスクに対して, フェデレートスケジューリング, G-EDF, G-RMのキャパシティ拡張境界がそれぞれ $2$, $2.618$, $3.732$ であることを証明した
+        \item フェデレートスケジューリングの境界 $2$, G-EDFの境界 $2.618$ は, $m$ が大きい場合, 一致する下限が存在するため, ともに厳密
+        \item さらに, これらの3つの境界は, DAGタスクに対するこれらのスケジューラの知る限り最も良い境界
     \end{itemize}
 \end{frame}
 
