--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/pracrical_considerations.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/pracrical_considerations.tex
@@ -28,7 +28,7 @@
 \begin{frame}{プリエンプション・マイグレーションによるオーバヘッド}
     以下の理由により, フェデレートスケジューリングのオーバヘッドはグローバルスケジューリングより小さいと予想できる
     \begin{itemize}
-        \item 各高利用度タスクに最小限の専用コアを割り当てるので, 高利用度タスクのプリエンプションはなく, マイグレーションの回数も最小に抑えられる
+        \item 各高利用率タスクに最小限の専用コアを割り当てるので, 高利用率タスクのプリエンプションはなく, マイグレーションの回数も最小に抑えられる
         \item シーケンシャル低利用率タスクの場合, プリエンプションとマイグレーションは, より高い優先度を持つ新しいジョブがリリースされたときにのみ発生する
     \end{itemize}
 \end{frame}
@@ -42,7 +42,7 @@
 
 \begin{frame}{フェデレートスケジューリングの欠点}
     \begin{itemize}
-        \item 多くの実システムでは, 最悪実行時間は悲観的である
+        \item 多くの実システムでは, 最悪実行時間は悲観的
         \item フェデレートスケジューリングでは, 最悪実行時間に基づいてタスクに割り当てられたコアは, リソースの過剰供給により, ほとんどの時間アイドル状態になる可能性がある
         \item これに対し, グローバルEDFやグローバルRMは, スレッドマイグレーションにより利用可能なコアを動的に活用できる
     \end{itemize}
