--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/prior_knowledge.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/prior_knowledge.tex
@@ -8,8 +8,8 @@
         \item \ourl{スケジューリングの分類}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2712044296}
         \item \ourl{デッドラインモデルの分類}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2721611859}
         \item \ourl{マルチコアプラットフォームの分類}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2721220872}
-        \item \ourl{Rate Monotonic Scheduling (RMS)}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2722103863/Rate+Monotonic+Scheduling+RMS}
-        \item \ourl{Earliest Deadline First (EDF) scheduling}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2721940251/Earliest+Deadline+First+EDF+scheduling}
+        \item \ourl{Rate Monotonic scheduling (RM)}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2722103863/Rate+Monotonic+scheduling+RM}
+        \item \ourl{Earliest Deadline First scheduling (EDF)}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2721940251/Earliest+Deadline+First+EDF+scheduling}
         \item \ourl{スケジューラの性能評価指標}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2722366820}
     \end{itemize}
 \end{frame}
