--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/related_work.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/related_work.tex
@@ -11,7 +11,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item リアルタイムマルチプロセッサスケジューリングは, 複数のプロセッサまたはコアを持つコンピュータ上でシーケンシャルなタスクをスケジューリングすることを考慮し, 広範囲に研究されている (サーベイとして[10, 23]を参照) 
+        \item リアルタイムマルチプロセッサスケジューリングは, 複数のプロセッサまたはコアを持つコンピュータ上でシーケンシャルなタスクをスケジューリングすることを考慮し, 広範囲に研究されている (サーベイとして[10, 23]を参照)
 \item また, Litmus $^{R T}[17$, $19]$ のようなプラットフォームはこれらのタスクセットをサポートするように設計されている
     \end{itemize}
 \end{frame}
@@ -20,9 +20,9 @@
     \begin{itemize}
         \item ここでは, 関連するいくつかの理論的な結果をレビューする
 \item 研究者たちは, リソース増強境界, 利用境界, 容量増強境界を証明してきた
-\item マルチプロセッサ上のシーケンシャルタスクに対するG-EDFの最もよく知られたリソース境界は2 [7]であり, 小さな $\epsilon$ に対する $2-\frac{1}{m}+\epsilon$ の容量拡張境界は[14]である
+\item マルチプロセッサ上のシーケンシャルタスクに対するG-EDFの最もよく知られたリソース境界は2 [7]であり, 小さな $\epsilon$ に対する $2-\frac{1}{m}+\epsilon$ のキャパシティ拡張境界は[14]である
 \item また, 分割EDFとバージョン分割静的優先度スケジューラは, $2[3,36]$ の利用率境界を提供する
-\item G-RMは暗黙のデッドラインタスクに対して3[2]の容量増強境界を提供する
+\item G-RMは暗黙的デッドラインタスクに対して3[2]の容量増強境界を提供する
     \end{itemize}
 \end{frame}
 
@@ -55,7 +55,7 @@
     \begin{itemize}
         \item もし, 使用するプリミティブを並列-forループに限定しないならば, より一般的なタスクモデルが得られ, 一般的な有向非巡回グラフで最も簡単に表現される
 \item G-EDFに対するリソース増大境界 $2-\frac{1}{m}$ は, 任意のデッドラインを持つ単一のDAGに対して証明され [8], また複数のDAGに対しても証明された [15, 34]
-\item 暗黙のデッドラインを持つタスクに対して, $4-\frac{2}{m}$ の容量拡張境界が[34]で証明された
+\item 暗黙的デッドラインを持つタスクに対して, $4-\frac{2}{m}$ のキャパシティ拡張境界が[34]で証明された
 \item Liuら[35]は, G-EDFの応答時間に関する分析を行った
     \end{itemize}
 \end{frame}
