--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/abstract.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/abstract.tex
@@ -2,7 +2,7 @@
 
 \begin{frame}{提案の概要}
     \begin{itemize}
-        \item Unrelatedヘテロジニアスマルチプロセッサプラットフォーム上で実行される, 暗黙のデッドラインを持つ散発的DAGのフェデレートスケジューリングアルゴリズムを紹介
+        \item Unrelatedヘテロジニアスマルチプロセッサプラットフォーム上で実行される, 暗黙的デッドラインを持つ散発的DAGのフェデレートスケジューリングアルゴリズムを紹介
 
         \item プロセッサの専用サブセットでのDAGのメイクスパンを見つけるための正式なスケジューラビリティ分析を提案
 
