--- a/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/introduction.tex
+++ b/paper/2021_ACM_TECS_Federated_Scheduling_of_Sporadic_DAGs_on_Unrelated_Multiprocessors/introduction.tex
@@ -13,7 +13,7 @@
         \end{itemize}
     \end{block}
     \begin{block}{解決する問題}
-        Unrelatedヘテロジニアスマルチプロセッサプラットフォーム上で, 暗黙のデッドラインを持つ一連の散発的なDAGをスケジューリングする
+        Unrelatedヘテロジニアスマルチプロセッサプラットフォーム上で, 暗黙的デッドラインを持つ一連の散発的なDAGをスケジューリングする
     \end{block}
 \end{frame}
 
