--- a/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/preliminaries.tex
+++ b/paper/2021_RTCSA_Timing_Anomaly_Free_Dynamic_Scheduling_of_Periodic_DAG_Tasks_with_Non_Preemptive_Nodes/preliminaries.tex
@@ -38,7 +38,7 @@
         \item 各タスク $\tau_{k}$ は, 相対デッドライン $D_{k}$ を割り当てられ, $T_{k}$ の周期でジョブ $\left\{J_{k, 1}, J_{k, 2}, \cdots\right\}$ の無限列をリリースする
         \item ジョブ, 例えば $J_{k, 1}$ は, $\tau_{k}$ のサブタスクからリリースされたサブジョブ $\left\{j_{k, 1,1}, j_{k, 2,1}, \ldots, j_{k, q_{k}, 1}\right\}$ から構成される
         \item サブジョブは, 対応するジョブの全ての先行タスクが完了すると, 実行可能な状態 (適格と呼ぶ) になる
-              % \item 簡単のために, タスクは暗黙のデッドライン, すなわち $T_{k}=D_{k}$ を持つと仮定するが, 我々のアルゴリズムはデッドラインが制約されたタスクに対しても有効である
+              % \item 簡単のために, タスクは暗黙的デッドライン, すなわち $T_{k}=D_{k}$ を持つと仮定するが, 我々のアルゴリズムはデッドラインが制約されたタスクに対しても有効である
         \item タスクセットのハイパーピリオドは, 周期の最小公倍数 (lcm) として定義される
     \end{itemize}
 \end{frame}
