--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/introduction.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/introduction.tex
@@ -16,7 +16,7 @@
     \begin{itemize}
         \item フェデレートスケジューリング [1] はリアルタイム性能と高い柔軟性を両立する有望なアプローチ
         \item フェデレートスケジューリングでは, デッドラインを守るために並列実行が必要な密度1以上の「重い」タスクは専用のプロセッサのサブセット上で排他的に実行され, 密度1以下の「軽い」タスクは, 他のプロセッサ上で従来の逐次リアルタイムタスクスケジューリングアルゴリズムを用いてスケジュールされる
-        \item フェデレートスケジューリングは, 定量的に最も優れた最悪性能保証 (容量拡張境界の観点) を提供する
+        \item フェデレートスケジューリングは, 定量的に最も優れた最悪性能保証 (キャパシティ拡張境界の観点) を提供する
         \item フェデレートスケジューリングは, タスクグラフのクリティカルパス長や総ワークロードといった抽象的な情報のみを必要とする分析技術であるため, 条件付きDAGタスク[2]やOpenMPタスクモデル[3]などに拡張可能
     \end{itemize}
 \end{frame}
