--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/overview.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/overview.tex
@@ -26,7 +26,7 @@
         \begin{itemize}
             \item $\tau_{i}$ が実際に $m_{i}$ プロセッサで実行されると, これらのプロセッサの処理能力のかなりの部分が浪費される可能性がある
             \item タスクの周期が相対デッドラインよりもはるかに長い場合, ジョブの絶対デッドラインと次のジョブのリリース時刻の間の処理能力は無駄になる
-            \item 暗黙のデッドラインタスクの場合でも, 処理能力の浪費が非常に大きくなる可能性がある
+            \item 暗黙的デッドラインタスクの場合でも, 処理能力の浪費が非常に大きくなる可能性がある
         \end{itemize}
     \end{frame}
 }
