--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/related_work.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/related_work.tex
@@ -42,7 +42,7 @@
             \item [32] と [6] では, グローバル EDF (GEDF) とグローバル RM (GRM) スケジューリングの両方に対して線形時間テストが提案されている
             \item 疑似多項式の時間十分なスケジューラビリティテストも [32] で提示された
             \item これは後に一般化され, [33] によって制限されたデッドライン DAG タスクに対して支配された
-            \item [7] では, GEDF スケジューリングの下で暗黙のデッドラインを持つ DAG タスクのスケジューラビリティ分析を実行するために, 利用率の限界が提案された
+            \item [7] では, GEDF スケジューリングの下で暗黙的デッドラインを持つ DAG タスクのスケジューラビリティ分析を実行するために, 利用率の限界が提案された
             \item GEDF または GRM スケジューリング [2], [16]-[19], [34] の下で DAG タスクをスケジューリングするための応答時間分析手法も提案されている
         \end{itemize}
     \end{frame}
@@ -50,7 +50,7 @@
     \begin{frame}{}
         \begin{itemize}
             \item パーティショニングスケジューリングでは, DAGタスクの各頂点が静的にプロセッサに割り当てられ, 各プロセッサのワークロードは自己中断を伴うリアルタイムタスクとしてモデル化され, 分析される[10], [20]
-            \item フェデレートスケジューリングでは, 各タスクは専用のプロセッサ群を割り当てられ, 実行時にその上で排他的に実行される.フェデレートスケジューリングはLi.et.al.によって最初に提案され[1], 暗黙のデッドラインを持つタスクに対して,  (容量拡張境界の観点から) 最高の定量的最悪性能保証を提供するものであった.その後, フェデレートスケジューリングは制約付き締切タスク[35], 任意締切タスク[36], さらに条件分岐を持つDAG[37]へと一般化された.フェデレートスケジューリングは, タスク間で一定の資源共有を可能にするいくつかのバリエーションに拡張される.セミフェデレートスケジューリングアプローチ[4]は, 異なる重いタスクが1つまたは2つのプロセッサを他のタスクと共有することを可能にします.予約ベースの連合型アプローチ[5]は, 従来のシーケンシャルタスクのためのアルゴリズムによってスケジューリングされた予約の集合に, 各タスクをディスパッチさせるものである.セクションIで述べたように, [4]と[5]はともにフェデレートスケジューリングの資源浪費の問題を限定的にしか解決していない.
+            \item フェデレートスケジューリングでは, 各タスクは専用のプロセッサ群を割り当てられ, 実行時にその上で排他的に実行される.フェデレートスケジューリングはLi.et.al.によって最初に提案され[1], 暗黙的デッドラインを持つタスクに対して,  (キャパシティ拡張境界の観点から) 最高の定量的最悪性能保証を提供するものであった.その後, フェデレートスケジューリングは制約付き締切タスク[35], 任意締切タスク[36], さらに条件分岐を持つDAG[37]へと一般化された.フェデレートスケジューリングは, タスク間で一定の資源共有を可能にするいくつかのバリエーションに拡張される.セミフェデレートスケジューリングアプローチ[4]は, 異なる重いタスクが1つまたは2つのプロセッサを他のタスクと共有することを可能にします.予約ベースの連合型アプローチ[5]は, 従来のシーケンシャルタスクのためのアルゴリズムによってスケジューリングされた予約の集合に, 各タスクをディスパッチさせるものである.セクションIで述べたように, [4]と[5]はともにフェデレートスケジューリングの資源浪費の問題を限定的にしか解決していない.
         \end{itemize}
     \end{frame}
 
