--- a/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/main.tex
+++ b/paper/2022_RAGE_Priority_Driven_Real_Time_Scheduling_in_ROS2_Potential_and_Challenges/main.tex
@@ -16,7 +16,7 @@
 Challenges}
 \subtitle{Real-time And intelliGent Edge computing workshop (RAGE), 2022}
 \author{矢野 篤志}
-\date{\today}
+% \date{\today}
 \institute[EMBIV]{EMBIV}
 \logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
