--- a/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/main.tex
+++ b/paper/x_2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/main.tex
@@ -15,7 +15,7 @@
 \title{Probabilistically Guaranteeing End-to-end Latencies in Autonomous Vehicle Computing Systems}
 \subtitle{IEEE Transactions on Computing (TC), 2022}
 \author{矢野 篤志}
-\date{\today}
+% \date{\today}
 \institute[EMBIV]{EMBIV}
 \logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
