--- a/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/main.tex
+++ b/paper/2005_Compositional_Scheduling_Analysis_Using_Standard_Event_Models/main.tex
@@ -12,10 +12,10 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Compositional Scheduling Analysis Using Standard Event Models (抜粋)}
-\subtitle{2005}
+\title{Compositional Scheduling Analysis Using Standard Event Models: The SymTA/S Approach (抜粋)}
+\subtitle{Kai Richer, 2004}
 \author{矢野 篤志}
-\date{\today}
+% \date{\today}
 \institute[EMBIV]{EMBIV}
 \logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
