--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/federated_scheduling.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/federated_scheduling.tex
@@ -32,25 +32,30 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{フェデレートスケジューリングのスケジュール成功条件}
+\begin{frame}{低利用率タスクへのコア割り当て}
     \begin{itemize}
-        \item 高利用率タスク $\tau_{\text {high }}$ に割り当てられたコアの総数を $n_{\text {high }}=\sum_{\tau_{i} \in \pi_{\text {high }}} n_{i}$ とする
-        \item 残りのコアを全ての低利用率タスク $\tau_{\text {low }}$ に割り当て, $n_{\text {low }}=m-n_{\text {high }}$ とする
-        \item フェデレートスケジューリングアルゴリズムは以下の式が満たされる場合, タスクセット $\tau$ をスケジュール可能
-              \[
-                  n_{\text {low }} \geq 2 \sum_{\tau_{i} \in \tau_{\text {low }}} u_{i}
-              \]
-              \notes{証明略}
+        \item 低利用率タスクには残り全てのコアを割り当てる
+        \item 高利用率タスクに割り当てられたコアの総数を$n_{\text {high }}=\sum_{\tau_{i} \in \pi_{\text {high }}} n_{i}$とすると, 低利用率タスクに割り当てられたコアの総数は$n_{\text {low }}=m-n_{\text {high }}$
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ランタイムスケジューリングの選択肢}
     フェデレートスケジューリングでは, 以下の条件を満たす任意のランタイムスケジューリングアルゴリズムを使用できる
-    \begin{block}{高利用率タスク}
+    \begin{block}{高利用率タスクのスケジューリング}
         貪欲 (作業保存型) スケジューラ
     \end{block}
-    \begin{block}{低利用率タスク}
-        $1 / 2$ の利用率境界を持つスケジューリングアルゴリズム
+    \begin{block}{低利用率タスクのスケジューリング}
+        $1 / 2$ の利用率境界を持つスケジューラ
         \notes{この時, $C_{i} \leq D_{i}$ で並列実行が必要ないため, 低利用率タスクは安全にシーケンシャルタスクとして扱える}
     \end{block}
+\end{frame}
+
+\begin{frame}[label=theorem1]{フェデレートスケジューリングのスケジュール成功条件}
+    \begin{theorem}[]
+        フェデレートスケジューリングアルゴリズムは以下の式が満たされる場合, タスクセット $\tau$ をスケジュール可能
+        \[
+            n_{\text {low }} \geq 2 \sum_{\tau_{i} \in \tau_{\text {low }}} u_{i}
+        \]
+        \notes{証明略}
+    \end{theorem}
 \end{frame}
