--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/main.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/main.tex
@@ -15,7 +15,7 @@
 \title{Analysis of Federated and Global Scheduling for Parallel Real-Time Tasks}
 \subtitle{IEEE Real-Time Systems Symposium (RTSS), 2014}
 \author{矢野 篤志}
-\date{\today}
+% \date{\today}
 \institute[EMBIV]{EMBIV}
 \logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
