--- a/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/system_model.tex
+++ b/paper/2014_RTSS_2014_RTSS_Analysis_of_Federated_and_Global_Scheduling_for_Parallel_Real_Time_Tasks/system_model.tex
@@ -16,7 +16,7 @@
 \begin{frame}{タスクモデル}
     \begin{itemize}
         \item $n$ 個の独立な散発的実時間タスク $\left\{\tau_{1}, \tau_{2}, \ldots, \tau_{n}\right\}$ の集合 $\tau$ を考える
-        \item タスク $\tau_{i}$ はジョブの無限のシーケンスを表す
+        \item タスク $\tau_{i}$ はジョブの無限のシーケンスを生成する
         \item タスク $\tau_{i}$ に対して, 周期 $T_{i}$ はタスクインスタンスの連続到着間の最小間隔を表し, 相対デッドライン $D_{i}$ はジョブ実行の時間制約を表す
         \item 暗黙的デッドラインタスクを考える
     \end{itemize}
@@ -40,10 +40,7 @@
         $\tau_{i}$ の全てのサブタスクの最悪実行時間の合計
     \end{block}
     \begin{block}{$\tau_{i}$ のクリティカルパス長 $L_{i}$}
-        \setlength{\linewidth}{0.98\columnwidth}
-        \begin{itemize}
-            \item クリティカルパスの長さは, コアが無限にあると想定した場合のタスクの最悪実行時間
-        \end{itemize}
+        コアが無限にあると想定した場合のタスクの最悪実行時間
     \end{block}
 \end{frame}
 
