--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
@@ -15,7 +15,7 @@
 \title{Automatic Latency Management for ROS2: Benefits, Challenges, and Open Problems}
 \subtitle{IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2021}
 \author{矢野 篤志}
-\date{\today}
+% \date{\today}
 \institute[EMBIV]{EMBIV}
 \logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
