--- a/paper/x_resource_reservation/main.tex
+++ b/paper/x_resource_reservation/main.tex
@@ -15,7 +15,7 @@
 \title{Title}
 \subtitle{conference, year}
 \author{矢野 篤志}
-\date{\today}
+% \date{\today}
 \institute[EMBIV]{EMBIV}
 \logo{\begin{textblock*}{0.1\linewidth}(2pt, 237pt)\includegraphics[scale=0.4]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
